# keydream

./: Makefile  README.md
client/: Makefile  main.lua
client-golang/: Makefile  go.mod  main.go
client-golang/common/: constants.go  player.go  view.go
client-golang/game/: fonts.go  game.go  gamestate.go  titlescreen.go
client-golang/keydream/: keydream.go
client-golang/lobby/: lobby.go  title.go  titlescreen.go  view.go  worldview.go
client-golang/models/: gamestate.go
client-golang/utils/: constants.go
client-golang/views/: background.go  loading.go  lobby.go  text_input.go  title.go  view.go  world.go
client-golang/world/: character.go  local_character.go  remote_character.go  transport.go  view.go  world.go
client/common/: animatable.lua  constants.lua  utils.lua
client/components/: button.lua  colors.lua  lobby_nameinput.lua  lobby_worldview.lua
client/connect/: connect.lua
client/lobby/: lobby.lua  (+1 more)
python-client/: README.md  game.py  main.py
rust-client/: Cargo.toml
rust-client/assets/: keydream.ldtk
rust-client/assets/environment/: map_tile_atlas.xcf  map_tile_atlas_full.xcf  wall_atlas_simplified.xcf  wall_atlas_slim_vertical.xcf
rust-client/assets/map/: map_example.csv  map_example_0.csv
rust-client/assets/sprites/: player_atlas.xcf  player_idle.xcf  player_idle_down.xcf  player_idle_left.xcf  player_idle_right.xcf  player_idle_up.xcf  player_walk.xcf
rust-client/src/: main.rs  player.rs  user_input.rs
server/: Dockerfile.gameserver  Dockerfile.lobby  Dockerfile.world  Makefile  README.md  docker-compose.yml  go.mod
(+79 files in other folders)
