[package]
name = "keydream"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.6.0"
#bevy_rng = "0.3.0" # bevy_rng doesnt build on 0.6.0, otherwise it would be here
csv = "1.1"
rand = "0.8.5"
bevy_ecs_ldtk = "0.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
